Fix paywall actions alignment issue

--- a/assets/src/scss/pages/preview.scss
+++ b/assets/src/scss/pages/preview.scss
@@ -117,6 +117,8 @@
 			align-items: center;
 
 			p {
+				height: 15px;
+				margin: 10px 10px 5px;
 
 				span.rev-gen-preview-main-paywall-name {
 					font-weight: 500;
@@ -131,6 +133,7 @@
 				border-bottom: 2px solid;
 				border-radius: 0;
 				background-color: inherit;
+				padding: 3px 24px 3px 8px;
 			}
 		}
 
@@ -148,7 +151,7 @@
 					display: none;
 				}
 
-				span.selection{
+				span.selection {
 					span.select2-selection {
 						border: 0;
 						border-bottom: 2px solid #000;
@@ -844,6 +847,17 @@
 	.rev-gen-preview-main {
 		&--paywall-actions {
 			width: 90%;
+
+			&-apply {
+				p {
+					margin: 15px 15px 5px;
+				}
+
+				.rev-gen-preview-main-paywall-applies-to {
+					font-size: 14px;
+					padding: 10px 24px 0 8px;
+				}
+			}
 		}
 	}
 }
